@@ -1,3 +1,8 @@
+2007-07-03  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/Editors/_EditNote.py: "Unicode control character" menu removed.
+	* src/MarkupText.py (class GtkSpellState): added;
+	(class MarkupBuffer): improved editor behavior.
+
 2007-07-02  Brian Matherly  <brian@gramps-project.org>
             Johan Gonqvist <johan.gronqvist@gmail.com>
 	* src/ReportBase/_ReportDialog.py (size_changed):
